--- a/views/mangas/list_mangas.ejs
+++ b/views/mangas/list_mangas.ejs
@@ -14,37 +14,12 @@
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="/admin/css/interface.css" rel="stylesheet" />
 
-    <style>
-        div.ui-helper-hidden-accessible {
-            display: none;
-        }
-    </style>
 </head>
 
 <body>
-    <div class="nav">
-        <input type="checkbox" id="nav-check">
-        <div class="nav-header">
-            <div class="nav-title">
-                <i class="fas fa-book-reader"></i> MangaLife
-            </div>
-        </div>
-        <div class="nav-btn">
-            <label for="nav-check">
-                <span></span>
-                <span></span>
-                <span></span>
-            </label>
-        </div>
+ 
 
-        <div class="nav-links">
-            <a href="/">Accueil</a>
-            <a href="/mangas">Listes des Mangas</a>
-            <a href="/login">Connexion</a>
-            <input type="text" id="search" placeholder="Rechercher un mangas">
-        </div>
-    </div>
-
+    <%- include ("../admin/layouts/navbar.ejs") -%>
 
     <div class="container">
         <section>
@@ -58,17 +33,14 @@
                     background: url(<%= mangas[i].cover %>) 5% 1%/cover no-repeat;
                     width: 65%;
                     ">
-                    <div>
-                        <a  href="/mangas/fiche/<%= mangas[i].manga_id %>" >Lite</a>
-
-                    </div>
+                  
 
                         <div class="date">
                            <a href="/mangas/categorie/<%= mangas[i].category_id %>"><span class="day"> <%= mangas[i].category.label %></span></a>
                         </div>
                         <div class="data">
                             <div class="content">
-                                <h1 class="title"><a href="/mangas/<%= mangas[i].manga_id %>/page/<%= mangas_chapter[i].chapter.chapter_id %>">Voir la fiche</a></h1>
+                                <h1 class="title"><a href="/mangas/fiche/<%= mangas[i].manga_id %> %>">Voir la fiche</a></h1>
                                 <small>Noté en moyenne à <%= mangas[i].score_total %>/5</small>
                                
                             </div>
@@ -132,60 +104,8 @@
 
 
 
+    <script src="/admin/js/search.js"></script>
 
-    <script>
-        $(document).ready(function ($) {
-
-            $('#search').autocomplete({
-                source: function (req, res) {
-                    $.ajax({
-                        url: "autocomplete/",
-                        dataType: "jsonp",
-                        type: "GET",
-                        data: req,
-
-                        success: function (data) {
-                            console.log(data)
-
-
-                            res($.map(data, function (item) {
-
-
-                                return {
-                                    label: item
-                                        .title, //text comes from a collection of mongo
-                                    value: item.manga_id
-                                };
-                            }));
-
-                        },
-                        error: function (err) {
-                            alert(err.status + ' : ' + err.statusText);
-                        }
-                    });
-                },
-                minLength: 1,
-                select: function (event, ui) {
-                    // alert("selected!");
-
-                    // console.log(event)
-                    // console.log(ui)
-
-
-                    if (ui.item) {
-                        // $('#search').val(ui.item.manga_id)
-                        window.location.replace('http://127.0.0.1:8890/mangas/fiche/' + ui.item
-                            .value);
-
-
-                    }
-                }
-            });
-        })
-    </script>
-
-
-    <script src="/admin/js/nav.js"></script>
 </body>
 
 </html>
