--- a/views/mangas/read.ejs
+++ b/views/mangas/read.ejs
@@ -3,35 +3,54 @@
 
 <head>
    <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-   <title>Read</title>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+   <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
+   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+   <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>-->
+
+
+   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> 
+   <link href="/admin/css/view.css" rel="stylesheet" />
+   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  
+
+   <title>Lecture du chapitre : <%if(!utilities.empty(chapters_pages)) {  %> <%= chapters_pages[0].chapter.title %> <% } %></title>
+
+  
+
 </head>
 
 <body>
+   <%- include ("../admin/layouts/navbar.ejs") -%>
 
-   <div class="container">
+   <div class="container-fiche">
 
-     
-
-         <% if (chapters_pages) { %>
-
-         <% for (var i = 0; i < chapters_pages.length; i++) { %>
+      <section>
 
 
-         
-            <p>Id:<%= chapters_pages[i].chapter_id %></p>
-            <p>Nom du chapitre:<%= chapters_pages[i].chapter.title %></p>
 
-            <img id="" src="<%= chapters_pages[i].page.scan %>" width="50%">
+         <div class="text-center">
+            <% if (chapters_pages) { %>
+
+            <% for (var i = 0; i < chapters_pages.length; i++) { %>
+
+            <h1>Nom du chapitre: <%= chapters_pages[i].chapter.title %></h1>
+            <hr>
+
+            <img id="scan" src="<%= chapters_pages[i].page.scan %>" width="50%">
 
 
-         <% } %>
-         <% } %>
+            <% } %>
+            <% } %>
+         </div>
 
-      
+
+
+
 
 
 
@@ -40,14 +59,27 @@
 
          <div class="text-center">
             <nav aria-label="Page navigation example" style="display: inline-block;">
-                  <ul class="pagination">
-                    <li class="page-item"><a class="page-link" href="/mangas/<%= chapters_pages[0].chapter.manga_id %>/page/<%=preview%>">Previous</a></li>
-                    <%for(let i =1; i <= pageCount;  i++ ) {  %>
-                     <li class="page-item active"><a class="page-link" href="/mangas/<%= chapters_pages[0].chapter.manga_id %>/page/<%=chapter_id%>/?page=<%=i%>"><%=i%></a></li>
-                     <% } %>
-                    <li class="page-item"><a class="page-link" href="/mangas/<%= chapters_pages[0].chapter.manga_id %>/page/<%=next%>">Next</a></li>
-                  </ul>
-         
+               <ul class="pagination">
+                  <%if(!utilities.empty(chapters_pages) && preview !=0) {  %>
+
+                  <li class="page-item"><a class="page-link"
+                        href="/mangas/<%= chapters_pages[0].chapter.manga_id %>/page/<%=preview%>">Previous</a></li>
+                  <% } %>
+
+
+                  <%for(let i =1; i <= pageCount;  i++ ) {  %>
+                  <li class="page-item active"><a class="page-link"
+                        href="/mangas/<%= chapters_pages[0].chapter.manga_id %>/page/<%=chapter_id%>/?page=<%=i%>"><%=i%></a>
+                  </li>
+                  <% } %>
+                  <%if(!utilities.empty(chapters_pages)) {  %>
+
+                  <li class="page-item"><a class="page-link"
+                        href="/mangas/<%= chapters_pages[0].chapter.manga_id %>/page/<%=next%>">Next</a></li>
+                  <% } %>
+
+               </ul>
+
             </nav>
          </div>
 
@@ -64,22 +96,36 @@
 
 
 
+      </section>
+
+
+      <footer>
+         <h2>Lire d'autre chapitres</h2>
+         <hr>
+
+         <% if (all_chapter) { %>
+
+         <ul>
+            <% for (var i = 0; i < all_chapter.length; i++) { %>
+
+            <li><a href="/mangas/<%= all_chapter[i].chapter.manga_id %>/page/<%= all_chapter[i].chapter_id %>">Nom du
+                  chapitre:<%= all_chapter[i].chapter.title %></a> </li>
+
+
+
+            <% } %>
+         </ul>
+
+         <% } %>
+      </footer>
 
 
 
 
+      <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+      <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+      <script src="/admin/js/search.js"></script>
 
-
-         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-         </script>
-         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-         </script>
-         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-         </script>
 
 </body>
 
