--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -1,3 +1,8 @@
+body{
+    background: #e74268;
+
+}
+
 a.badge.badge-danger {
     color: #ffffff;
     width: 60%;
@@ -12,6 +17,6 @@ a.badge.badge-danger {
 }
 
 .centered-form .panel{
-	background: rgba(255, 255, 255, 0.8);
+	/* background: rgba(255, 255, 255, 0.8); */
 	box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
 }
