--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,77 +1,86 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link href="/admin/css/style.css" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/4d66efb478.js"></script>
 
-    <title>Dashboard</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="/admin/css/view.css" rel="stylesheet" />
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
+    <title>Tableau de bord admin</title>
 </head>
 
 <body>
+    <%- include ("../admin/layouts/navbar.ejs") -%>
+
+
+
+    <div class="container-fiche">
+        <section>
+
+            <ul>
+
+                <li><a class="btn btn-success" href="/mangas/create"><i class="fas fa-plus-square"></i>  Ajouter une mangas</a></li>
+            </ul>
+            <div class="row">
+
+                <table class="table text-center">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Titre du manga</th>
+                            <th scope="col">Cover</th>
+                            <th scope="col">Categorie</th>
+                            <th scope="col">Actions chapitre</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% for (let i=0; i < mangas.length; i++) { %>
+                        <tr>
+
+                            <td><%= mangas[i].title %></td>
+                            <td class="col-5"><a href="/mangas/fiche/<%= mangas[i].manga_id %>"><img src="<%= mangas[i].cover %>"
+                                        width="30%" alt=""></a></td>
+                            <td><%= mangas[i].category.label %></td>
+                            <td><a class="btn btn-primary" href="/mangas/chapter/create/<%= mangas[i].manga_id %>"><i
+                                        class="fas fa-plus-square"></i></a>
+                                <a class="btn btn-warning" href="/mangas/chapter/<%= mangas[i].manga_id %>"><i
+                                        class="fas fa-eye"></i></a>
+                                <a class="btn btn-danger" href="/delete/<%= mangas[i].manga_id %>"><i
+                                        class="fas fa-trash-alt"></i></a>
+
+                            </td>
 
 
 
 
-    <div class="container">
-        <ul>
-
-            <li><a href="/mangas/create">Ajouter une mangas</a></li>
-        </ul>
-        <div class="row">
 
 
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>Titre du manga</th>
-                        <th>Cover</th>
-                        <th>Categorie</th>
-                        <th>Ajouter un chapitre</th>
+                        </tr>
+                        <% } %>
+
+                    </tbody>
+                </table>
+
+
+            </div>
+        </section>
 
 
 
-                    </tr>
-                </thead>
-                <tbody>
-                    <% for (let i=0; i < mangas.length; i++) { %>
-                    <tr>
 
-                        <td><%= mangas[i].title %></td>
-                        <td><a href="/mangas/fiche/<%= mangas[i].manga_id %>"><img src="<%= mangas[i].cover %>" width="30%" alt=""></a></td>
-                        <td><%= mangas[i].category.label %></td>
-                        <td><a href="/mangas/chapter/create/<%= mangas[i].manga_id %>">Ajouter un chapitre</a></td>
-                        <td><a href="/mangas/chapter/<%= mangas[i].manga_id %>">Voir les chapitre</a></td>
-                        <td><a href="/delete/<%= mangas[i].manga_id %>">Supprimer</a></td>
-
-                        
-
-
-
-                    </tr>
-                    <% } %>
-
-                </tbody>
-            </table>
-        </div>
-    
-    
 
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-    </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-    </script>
 
+    <script src="/admin/js/search.js"></script>
 </body>
