--- a/views/mangas/create.ejs
+++ b/views/mangas/create.ejs
@@ -1,30 +1,149 @@
-<form action="/mangas/create" method="POST" enctype="multipart/form-data">
+<!DOCTYPE html>
+<html lang="fr">
 
-    <input type="text" class="form-control" name="title" id="title" value="">
-    <input type="text" class="form-control" name="description" id="description" value="">
-    <input type="text" class="form-control" name="author" id="author" value="">
-    <input type="date" class="form-control" name="date" id="date" value="">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 
-    <select name="status" >
-        <option value="" disabled>Selectionner le status</option>
-        <option value="En cours">En cours</option>
-        <option value="En pause">En pause</option>
-        <option value="Terminer">Terminer</option>
-    
-    </select>
-    <select name="category_id" >
-        <option value="" disabled>Selectionner la categorie</option>
-        <% for (let i=0; i < categories.length; i++) { %>
-        <option value="<%= categories[i].category_id %>"><%= categories[i].label %></option>
-        <% } %>
+    <link href="/admin/css/style.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/4d66efb478.js"></script>
 
-    
-    </select>
+    <title>Création d'un mangas</title>
+</head>
+
+<body>
+
+    <div class="container">
+        <div class="row centered-form">
+
+            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-4">
+
+                <div class="panel panel-default">
+                    <% if (message) { %>
+
+                    <div class="alert alert-<%=message.type%>  text-dark" role="alert">
+                        <%=message.intro%>:<%=message.message%>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+
+                    <% } %>
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Formulaire d'ajout d'un mangas</h3>
+
+                    </div>
+                    <div class="panel-body">
+
+                        <form action="/mangas/create" method="POST" enctype="multipart/form-data">
+
+                            <div class="form-group">
+
+                                <div class="form-group">
+                                    <label for="title">Titre du mangas</label>
+
+                                    <input type="text" class="form-control" name="title" id="title" value="" required>
+
+                                </div>
+                                <div class="form-group">
+                                    <label for="description">Résumer</label>
+                                    <textarea class="form-control" id="description" name="description" placeholder="Entrez le résumer ici..." required></textarea>
+
+                                    <!-- <input type="text" class="form-control" name="description" id="description"
+                                        value=""> -->
+
+                                </div>
+                                <div class="form-group">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <label for="author"><i class="fas fa-user-circle"></i>  Auteur</label>
+
+                                            <input type="text" class="form-control" name="author" id="author" value="" required>
+
+                                        </div>
+
+                                        <div class="col-md-6">
+                                            <label for="date"><i class="far fa-calendar-alt"></i>  Date de sortie</label>
+
+                                            <input type="date" class="form-control" name="date" id="date" value="" required>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                                <div class="form-group">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <select name="status" class="form-control">
+                                                <option value="" disabled selected>Selectionner le status</option>
+                                                <option value="En cours">En cours</option>
+                                                <option value="En pause">En pause</option>
+                                                <option value="Terminer">Terminer</option>
+
+                                            </select>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <select name="category_id" class="form-control" required>
+                                                <option value="" disabled selected>Selectionner la categorie</option>
+                                                <% for (let i=0; i < categories.length; i++) { %>
+                                                <option value="<%= categories[i].category_id %>">
+                                                    <%= categories[i].label %>
+                                                </option>
+                                                <% } %>
 
 
-    <input type="file" class="form-control" name="cover" id="cover" value="">
+                                            </select>
+                                        </div>
 
-    <input type="submit" value="Valider">
+                                    </div>
 
 
-</form>
+                                </div>
+
+
+
+                                <div class="form-group">
+                                    <label for="cover"><i class="fas fa-file-archive"></i>  Image cover</label>
+                                    <input type="file" class="form-control" name="cover" id="cover" value="" required>
+                                </div>
+
+                               
+
+                                <input type="submit" value="Valider" class="btn btn-info btn-block">
+
+
+
+                            </div>
+                        </form>
+
+                    </div>
+
+
+
+                </div>
+
+
+
+            </div>
+
+        </div>
+
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> -->
+
+</body>
