--- a/views/mangas/create_page.ejs
+++ b/views/mangas/create_page.ejs
@@ -1,16 +1,95 @@
-<form action="/mangas/pages/create" method="POST" enctype="multipart/form-data">
+
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
+    <link href="/admin/css/style.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/4d66efb478.js"></script>
+
+    <title>Ajout des page du chapitre: <%= chapter.title %></title>
+</head>
+
+<body>
 
 
 
-    <h1><%= chapter.title %></h1>
-    
-    <label for="scan">Select files:</label>
-    <input type="file" id="scan" name="scan" multiple>
 
-    <input type="text" class="form-control" name="chapter_id" id="chapter_id" value="<%= chapter.chapter_id %>" style="display: none;">
+    <div class="container">
+        <div class="row centered-form">
+
+            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-4">
+
+                <div class="panel panel-default">
+                    <% if (message) { %>
+
+                    <div class="alert alert-<%=message.type%>  text-dark" role="alert">
+                        <%=message.intro%>:<%=message.message%>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+
+                    <% } %>
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Ajout des page du chapitre: <%= chapter.title %></h3>
+
+                    </div>
+                    <div class="panel-body">
+
+                        <form action="/mangas/pages/create" method="POST" enctype="multipart/form-data">
+
+                            <div class="form-group">
+
+                                <div class="form-group">
+                                    <label for="scan"><i class="fas fa-file-archive"></i>  Ajouter des pages</label>
+
+                                    <input type="file" id="scan" name="scan" multiple>
+                                    <input type="text" class="form-control" name="chapter_id" id="chapter_id" value="<%= chapter.chapter_id %>" style="display: none;">
 
 
-    <input type="submit" value="Valider">
+                                </div>
 
 
-</form>
+
+                                <input type="submit" value="Valider" class="btn btn-info btn-block">
+
+
+
+                            </div>
+                        </form>
+
+                    </div>
+
+
+
+                </div>
+
+
+
+            </div>
+
+        </div>
+
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> -->
+
+</body>
+
+
+
