--- a/views/mangas/list_chapter.ejs
+++ b/views/mangas/list_chapter.ejs
@@ -1,27 +1,84 @@
-<h1> <%= mangas_chapters[0].manga.title %>
-</h1>
-<table border="1">
-    <thead>
-        <tr>
-            <th>Chapitres</th>
-            <th>Tous les pages</th>
-            <th>Ajouter des pages au chapitre</th>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="/admin/css/view.css" rel="stylesheet" />
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
+    <title>Tableau de bord admin : Chapitre</title>
+</head>
+
+<body>
+    <%- include ("../admin/layouts/navbar.ejs") -%>
 
 
 
-        </tr>
-    </thead>
-    <tbody>
-        <% for (let i=0; i < mangas_chapters.length; i++) { %>
-        <tr>
+    <div class="container-fiche">
+        <section>
 
-            <td><%= mangas_chapters[i].chapter.title %></td>
-            <td><a href="/mangas/pages/<%= mangas_chapters[i].chapter_id %>">Voir les pages</a></td>
-            <td><a href="/mangas/pages/create/<%= mangas_chapters[i].chapter_id %>">Ajouter une pages</a></td>
+            <ul>
+
+                <li><a class="btn btn-success" href="/admin"><i class="fas fa-plus-square"></i> Tableau de bord</a></li>
+                <br>
+
+            </ul>
+            <div class="row">
+
+                <table class="table text-center">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Chapitres</th>
+                            <th scope="col">Actions pages</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% for (let i=0; i < mangas_chapters.length; i++) { %>
+                        <tr>
+
+                            <td><%= mangas_chapters[i].chapter.title %></td>
+
+                            <td><a class="btn btn-primary"
+                                    href="/mangas/pages/create/<%= mangas_chapters[i].chapter_id %>"><i
+                                        class="fas fa-plus-square"></i></a>
+                                <a class="btn btn-warning" href="/mangas/pages/<%= mangas_chapters[i].chapter_id %>"><i
+                                        class="fas fa-eye"></i></a>
 
 
-        </tr>
-        <% } %>
+                            </td>
 
-    </tbody>
-</table>
+
+
+
+
+
+                        </tr>
+                        <% } %>
+
+                    </tbody>
+                </table>
+
+
+            </div>
+        </section>
+
+
+
+
+
+    </div>
+
+
+    <script src="/admin/js/search.js"></script>
+</body>
